--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,4 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+MYAPP_RELEASE_STORE_FILE=weekCal-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=weekCal-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=weekCal
+MYAPP_RELEASE_KEY_PASSWORD=weekCal
 android.useDeprecatedNdk=true
